# curb_detection

./: .gitattributes
devel/: .catkin  _setup_util.py  local_setup.sh
devel/lib/curb_features_extract/: test_h_diff_node  test_star_shaped_node  test_x_zero_node  test_z_zero_node
devel/lib/pkgconfig/: curb_features_extract.pc
devel/share/curb_features_extract/cmake/: curb_features_extractConfig.cmake
src/curb_features_extract/: CMakeLists.txt  package.xml
src/curb_features_extract/src/: CMakeLists.txt
src/curb_features_extract/src/base/: pointxyzirt.h
src/curb_features_extract/src/h_diff/: CMakeLists.txt  h_diff.cpp  h_diff.h
src/curb_features_extract/src/interface/: interface_features_extract.h
src/curb_features_extract/src/node/: CMakeLists.txt  test_h_diff_node.cpp  test_star_shaped_node.cpp  test_x_zero_node.cpp  test_z_zero_node.cpp
src/curb_features_extract/src/star_shaped/: CMakeLists.txt  star_shaped.cpp  star_shaped.h
src/curb_features_extract/src/x_zero/: CMakeLists.txt  x_zero.cpp  x_zero.h
src/curb_features_extract/src/z_zero/: CMakeLists.txt  z_zero.cpp  z_zero.h
